# Newton-Raphson-Solver

./: CMakeLists.txt  LICENSE  README.md  equation.cpp  equation.h  functions.cpp  functions.h  getEq.cpp  main.cpp  newton-raphson-equation-solver.md  readData.cpp  readData.h  specialFunction.cpp  specialFunction.h  unittest.h  unittestDiff.h
example/: data.json
include/: equation.h  functions.h  readData.h
performance/: gprof_O0_final_log.txt  performance.md
src/: equation.cpp  functions.cpp  main.cpp  readData.cpp
test/: unittest.cpp  unittest.h  unittestDiff.h
